--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddEdit"></activity>
+        <activity android:name=".Alertt"></activity>
+        <activity android:name=".AddEdit" />
+        <receiver android:name=".AlarmReciever" android:exported="true" android:enabled="true"> </receiver>
+        <receiver android:name=".NotificManager" android:exported="true" android:enabled="true"> </receiver>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
